--- a/Notes.org
+++ b/Notes.org
@@ -1,8 +1,11 @@
-#+TITLE Σημειωσεις Εργασειας
+#+TITLE: Σημειωσεις Εργασειας
 
 * Πρωτη Παραδωση
 
 - Αρχικη ιδέα
 
 - Επιχειρησιακός στόχος
+
+
+22 Μαϊου
 
