--- a/Erg1.org
+++ b/Erg1.org
@@ -2,6 +2,8 @@
 
 * Task 1: Create a High Concept Statement for the product
 
+RecycleRanger is a waste reduction and sustainability app for kids. It tracks waste and provides insights to educate and engage children in protecting the environment.
+
 * Task 2: Identify the business objectives the product wil serve
 
 * Task 3: Identify the user population
